Update Java version, iOS wiki path and config, swiep life method

--- a/EndpointHomework/src/main/resources/configuration.properties
+++ b/EndpointHomework/src/main/resources/configuration.properties
@@ -2,3 +2,8 @@ appiumServerUrl=http://127.0.0.1:4723/wd/hub
 androidUiAutomator2=UiAutomator2
 androidWikipediaPackage=org.wikipedia
 androidAppActivity=.main.MainActivity
+
+iosAppiumServerUrl=http://127.0.0.1:4724/wd/hub
+iOSWikiBuildingId=org.wikimedia.wikipedia
+iOSWikiAppPath=/app/Wikipedia.app
+iOSTestFramework=XCUITest
